--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,8 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
   }
+  #header{
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+  }
