--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,132 @@
     width: 100%;
     z-index: 1000;
   }
+
+  * {
+    font-family: "Comic Sans MS", "Comic Sans";
+}
+
+body {
+    background-size: cover;
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    margin: 0;
+}
+
+nav {
+    background: rgb(73, 79, 192);
+    background: linear-gradient(90deg, rgb(68, 61, 108) 0%, rgb(76, 61, 144) 27%, rgba(0, 0, 71, 1) 100%);
+    border-radius: 4em;
+    height: 70px;
+    width: 100%;
+    position: absolute;
+    z-index: 99;
+    top: 0;
+}
+
+#wallpaper {
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    z-index: -1;
+    position: fixed;
+    top: 0;
+    min-height: 100%;
+    min-width: 100%;
+}
+
+#wallpaper_mobile {
+    background-image: url("../img/old_town_poster.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 1800px;
+    z-index: -1;
+    min-width: 100%;
+    max-width: 100%;
+    position: fixed;
+    top: 0;
+}
+
+#collapseMenu {
+    position: fixed;
+    margin: 4.5em;
+    max-width: 580px;
+}
+
+.sims_div {
+    background-color: rgb(9, 0, 80);
+    border: 6px outset rgb(98, 98, 172);
+}
+
+.center {
+    text-align: center;
+}
+
+.sims_div h1,
+h2,
+h3,
+h4,
+h5,
+p {
+    color: rgb(218, 218, 218);
+}
+
+nav .travel_bar img {
+    height: 90px;
+    padding: 0;
+    cursor: pointer;
+}
+
+#logo {
+    max-width: 90px;
+    margin-left: 1em;
+    margin-right: 2em;
+    padding: 5px;
+}
+
+.white {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+.white:hover{
+    color: rgb(198, 198, 198);
+}
+.white a {
+    color: #53C0FB;
+}
+
+button.btn {
+    background-color: rgb(41, 105, 179);
+    border: 4px outset #4d92dc;
+    padding: 10px 20px;
+    line-height: .6;
+    border-radius: 1em;
+    transform: skewX(-25deg);
+    cursor: pointer;
+    min-width: 10em;
+    margin-right: 2em;
+}
+
+.sims_div .btn {
+    margin-top: .5em;
+}
+
+.btn a {
+    text-decoration: none;
+}
+
+.btn span:hover {
+    color: rgb(255, 255, 255);
+}
+
+.btn span:active {
+    color: rgb(0, 217, 255);
+}
+
+.btn span {
+    color: rgb(218, 218, 218);
+    display: block;
+    transform: skewX(25deg);
+}
