Buttons and bonus

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ nav .travel_bar img {
     color: #53C0FB;
 }
 
-button.btn {
+button.sims_btn {
     background-color: rgb(41, 105, 179);
     border: 4px outset #4d92dc;
     padding: 10px 20px;
@@ -117,24 +117,43 @@ button.btn {
     min-width: 10em;
     margin-right: 2em;
 }
-
-.sims_div .btn {
-    margin-top: .5em;
+button.sims_btn:hover{
+    background-color: rgb(41, 105, 179);
+    border: 4px outset #4d92dc;
+    padding: 10px 20px;
+    line-height: .6;
+    border-radius: 1em;
+    transform: skewX(-25deg);
+    cursor: pointer;
+    min-width: 10em;
+    margin-right: 2em;  
 }
 
-.btn a {
+button.sims_btn:active{
+    background-color: rgb(41, 105, 179);
+    border: 4px outset #4d92dc;
+    padding: 10px 10px;
+    line-height: .6;
+    border-radius: 1em;
+    transform: skewX(-25deg);
+    cursor: pointer;
+    min-width: 10em;
+    margin-right: 2em;  
+}
+
+.sims_btn a {
     text-decoration: none;
 }
 
-.btn span:hover {
+.sims_btn span:hover {
     color: rgb(255, 255, 255);
 }
 
-.btn span:active {
+.sims_btn span:active {
     color: rgb(0, 217, 255);
 }
 
-.btn span {
+.sims_btn span {
     color: rgb(218, 218, 218);
     display: block;
     transform: skewX(25deg);
