--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,11 @@ nav {
 }
 
 .sims_div {
+    color: rgb(218, 218, 218);
     background-color: rgb(9, 0, 80);
     border: 6px outset rgb(98, 98, 172);
 }
+
 
 .center {
     text-align: center;
