--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,12 @@
   * {
     font-family: "Comic Sans MS", "Comic Sans";
 }
-
+table{
+--bs-table-color:none!important;
+--bs-table-bg:none!important;
+--bs-table-striped-color:none!important;
+--bs-table-striped-bg:rgb(9, 0, 110)!important;
+}
 body {
     background-size: cover;
     background-position: left top;
